5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4380/executions/1577_1332.log
== TEST (2019-03-17 15:46:27) 
-- CODE:
aresta = 5
area = 1,5*3**0,5*5*
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 1,5*3**0,5*5*
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-17 15:46:56) 
-- CODE:
aresta = 5
area = 1,5*3**0,5*5*5
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-17 15:48:04) 
-- CODE:
aresta = 5
area = print(round(1,5*3**0,5*5*5, 4))
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = print(round(1,5*3**0,5*5*5, 4))
TypeError: round() takes at most 2 arguments (4 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-17 15:51:52) 
-- CODE:
aresta = 5
area = print(3/2*3**0.5*25)
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(area, 4))
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-17 15:53:02) 
-- CODE:
aresta = 5
area = print(3/2*25)
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(area, 4))
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-17 15:55:03) 
-- CODE:
aresta = 5
area = 3/2 * 3 ** 0.5 * 5 ** 2
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-17 15:55:25) 
-- CODE:
aresta = 3
area = 3/2 * 3 ** 0.5 * 5 ** 2
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-17 15:55:40) 
-- CODE:
aresta = 3
area = 3/2 * 3 ** 0.5 * 3 ** 2
print(round(area, 4))
-- OUTPUT:
23.3827
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-17 15:57:35) 
-- CODE:
aresta = 5
area = 3/2*3**0.5*5**2
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 15:57:40) 
-- CODE:
aresta = 5
area = 3/2*3**0.5*5**2
print(round(area, 4))
-- EXECUTION TIME:
0.148961
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
